Lab4/Code/syntax.output
Terminals unused in grammar

   digit
   integer
   letter
   SPACE
   TAB
   LINEBREAK


状态 34 conflicts: 1 shift/reduce


语法

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec error SEMI
    8       | Specifier error CompSt
    9       | error SEMI

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList

   12 Specifier: TYPE
   13          | StructSpecifier

   14 StructSpecifier: STRUCT OptTag LC DefList RC
   15                | STRUCT Tag

   16 OptTag: ID
   17       | %empty

   18 Tag: ID

   19 VarDec: ID
   20       | VarDec LB INT RB
   21       | error RB

   22 FunDec: ID LP VarList RP
   23       | ID LP RP
   24       | ID LP error RP

   25 VarList: ParamDec COMMA VarList
   26        | ParamDec

   27 ParamDec: Specifier VarDec

   28 CompSt: LC DefList StmtList RC
   29       | LC DefList error RC
   30       | LC DefList StmtList error

   31 StmtList: Stmt StmtList
   32         | %empty

   33 Stmt: Exp SEMI
   34     | CompSt
   35     | RETURN Exp SEMI
   36     | IF LP Exp RP Stmt
   37     | IF LP Exp RP Stmt ELSE Stmt
   38     | WHILE LP Exp RP Stmt
   39     | Exp error SEMI
   40     | IF error RP Stmt
   41     | IF error RP Stmt ELSE Stmt

   42 DefList: Def DefList
   43        | %empty

   44 Def: Specifier DecList SEMI
   45    | Specifier error SEMI

   46 DecList: Dec
   47        | Dec COMMA DecList

   48 Dec: VarDec
   49    | VarDec ASSIGNOP Exp
   50    | error ASSIGNOP Exp

   51 Exp: Exp ASSIGNOP Exp
   52    | Exp AND Exp
   53    | Exp OR Exp
   54    | Exp RELOP Exp
   55    | Exp PLUS Exp
   56    | Exp MINUS Exp
   57    | Exp STAR Exp
   58    | Exp DIV Exp
   59    | LP Exp RP
   60    | MINUS Exp
   61    | NOT Exp
   62    | ID LP Args RP
   63    | ID LP RP
   64    | Exp LB Exp RB
   65    | Exp DOT ID
   66    | ID
   67    | INT
   68    | FLOAT
   69    | Exp LB error RB

   70 Args: Exp COMMA Args
   71     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 8 9 21 24 29 30 39 40 41 45 50 69
digit (258)
integer (259)
letter (260)
SPACE (261)
TAB (262)
LINEBREAK (263)
INT (264) 20 67
FLOAT (265) 68
ID (266) 16 18 19 22 23 24 62 63 65 66
TYPE (267) 12
ASSIGNOP (268) 49 50 51
AND (269) 52
OR (270) 53
RELOP (271) 54
PLUS (272) 55
MINUS (273) 56 60
STAR (274) 57
DIV (275) 58
NOT (276) 61
DOT (277) 65
LP (278) 22 23 24 36 37 38 59 62 63
RP (279) 22 23 24 36 37 38 40 41 59 62 63
LB (280) 20 64 69
RB (281) 20 21 64 69
LC (282) 14 28 29 30
RC (283) 14 28 29
COMMA (284) 11 25 47 70
SEMI (285) 4 5 7 9 33 35 39 44 45
WHILE (286) 38
IF (287) 36 37 40 41
ELSE (288) 37 41
STRUCT (289) 14 15
RETURN (290) 35
LOWER_THAN_ELSE (291)


Nonterminals, with rules where they appear

$accept (37)
    左： 0
Program (38)
    左： 1, 右： 0
ExtDefList (39)
    左： 2 3, 右： 1 2
ExtDef (40)
    左： 4 5 6 7 8 9, 右： 2
ExtDecList (41)
    左： 10 11, 右： 4 11
Specifier (42)
    左： 12 13, 右： 4 5 6 7 8 27 44 45
StructSpecifier (43)
    左： 14 15, 右： 13
OptTag (44)
    左： 16 17, 右： 14
Tag (45)
    左： 18, 右： 15
VarDec (46)
    左： 19 20 21, 右： 10 11 20 27 48 49
FunDec (47)
    左： 22 23 24, 右： 6 7
VarList (48)
    左： 25 26, 右： 22 25
ParamDec (49)
    左： 27, 右： 25 26
CompSt (50)
    左： 28 29 30, 右： 6 8 34
StmtList (51)
    左： 31 32, 右： 28 30 31
Stmt (52)
    左： 33 34 35 36 37 38 39 40 41, 右： 31 36 37 38 40 41
DefList (53)
    左： 42 43, 右： 14 28 29 30 42
Def (54)
    左： 44 45, 右： 42
DecList (55)
    左： 46 47, 右： 44 47
Dec (56)
    左： 48 49 50, 右： 46 47
Exp (57)
    左： 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69,
    右： 33 35 36 37 38 39 49 50 51 52 53 54 55 56 57 58 59 60 61
    64 65 69 70 71
Args (58)
    左： 70 71, 右： 62 70


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          转到状态 4
    ExtDefList       转到状态 5
    ExtDef           转到状态 6
    Specifier        转到状态 7
    StructSpecifier  转到状态 8


State 1

    9 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   12 Specifier: TYPE .

    $default  reduce using rule 12 (Specifier)


State 3

   14 StructSpecifier: STRUCT . OptTag LC DefList RC
   15                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 17 (OptTag)

    OptTag  转到状态 11
    Tag     转到状态 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       转到状态 14
    ExtDef           转到状态 6
    Specifier        转到状态 7
    StructSpecifier  转到状态 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec error SEMI
    8       | Specifier . error CompSt

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  转到状态 18
    VarDec      转到状态 19
    FunDec      转到状态 20


State 8

   13 Specifier: StructSpecifier .

    $default  reduce using rule 13 (Specifier)


State 9

    9 ExtDef: error SEMI .

    $default  reduce using rule 9 (ExtDef)


State 10

   16 OptTag: ID .
   18 Tag: ID .

    LC        reduce using rule 16 (OptTag)
    $default  reduce using rule 18 (Tag)


State 11

   14 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 21


State 12

   15 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 15 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  接受


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

    8 ExtDef: Specifier error . CompSt
   21 VarDec: error . RB

    RB  shift, and go to state 22
    LC  shift, and go to state 23

    CompSt  转到状态 24


State 16

   19 VarDec: ID .
   22 FunDec: ID . LP VarList RP
   23       | ID . LP RP
   24       | ID . LP error RP

    LP  shift, and go to state 25

    $default  reduce using rule 19 (VarDec)


State 17

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 26


State 19

   10 ExtDecList: VarDec .
   11           | VarDec . COMMA ExtDecList
   20 VarDec: VarDec . LB INT RB

    LB     shift, and go to state 27
    COMMA  shift, and go to state 28

    $default  reduce using rule 10 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . error SEMI

    error  shift, and go to state 29
    LC     shift, and go to state 23

    CompSt  转到状态 30


State 21

   14 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 43 (DefList)

    Specifier        转到状态 31
    StructSpecifier  转到状态 8
    DefList          转到状态 32
    Def              转到状态 33


State 22

   21 VarDec: error RB .

    $default  reduce using rule 21 (VarDec)


State 23

   28 CompSt: LC . DefList StmtList RC
   29       | LC . DefList error RC
   30       | LC . DefList StmtList error

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 43 (DefList)

    Specifier        转到状态 31
    StructSpecifier  转到状态 8
    DefList          转到状态 34
    Def              转到状态 33


State 24

    8 ExtDef: Specifier error CompSt .

    $default  reduce using rule 8 (ExtDef)


State 25

   22 FunDec: ID LP . VarList RP
   23       | ID LP . RP
   24       | ID LP . error RP

    error   shift, and go to state 35
    TYPE    shift, and go to state 2
    RP      shift, and go to state 36
    STRUCT  shift, and go to state 3

    Specifier        转到状态 37
    StructSpecifier  转到状态 8
    VarList          转到状态 38
    ParamDec         转到状态 39


State 26

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 27

   20 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 40


State 28

   11 ExtDecList: VarDec COMMA . ExtDecList

    error  shift, and go to state 41
    ID     shift, and go to state 42

    ExtDecList  转到状态 43
    VarDec      转到状态 19


State 29

    7 ExtDef: Specifier FunDec error . SEMI

    SEMI  shift, and go to state 44


State 30

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 31

   44 Def: Specifier . DecList SEMI
   45    | Specifier . error SEMI

    error  shift, and go to state 45
    ID     shift, and go to state 42

    VarDec   转到状态 46
    DecList  转到状态 47
    Dec      转到状态 48


State 32

   14 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 49


State 33

   42 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 43 (DefList)

    Specifier        转到状态 31
    StructSpecifier  转到状态 8
    DefList          转到状态 50
    Def              转到状态 33


State 34

   28 CompSt: LC DefList . StmtList RC
   29       | LC DefList . error RC
   30       | LC DefList . StmtList error

    error   shift, and go to state 51
    INT     shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    MINUS   shift, and go to state 55
    NOT     shift, and go to state 56
    LP      shift, and go to state 57
    LC      shift, and go to state 23
    WHILE   shift, and go to state 58
    IF      shift, and go to state 59
    RETURN  shift, and go to state 60

    error  [reduce using rule 32 (StmtList)]
    RC     reduce using rule 32 (StmtList)

    CompSt    转到状态 61
    StmtList  转到状态 62
    Stmt      转到状态 63
    Exp       转到状态 64


State 35

   24 FunDec: ID LP error . RP

    RP  shift, and go to state 65


State 36

   23 FunDec: ID LP RP .

    $default  reduce using rule 23 (FunDec)


State 37

   27 ParamDec: Specifier . VarDec

    error  shift, and go to state 41
    ID     shift, and go to state 42

    VarDec  转到状态 66


State 38

   22 FunDec: ID LP VarList . RP

    RP  shift, and go to state 67


State 39

   25 VarList: ParamDec . COMMA VarList
   26        | ParamDec .

    COMMA  shift, and go to state 68

    $default  reduce using rule 26 (VarList)


State 40

   20 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 69


State 41

   21 VarDec: error . RB

    RB  shift, and go to state 22


State 42

   19 VarDec: ID .

    $default  reduce using rule 19 (VarDec)


State 43

   11 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 11 (ExtDecList)


State 44

    7 ExtDef: Specifier FunDec error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 45

   21 VarDec: error . RB
   45 Def: Specifier error . SEMI
   50 Dec: error . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 70
    RB        shift, and go to state 22
    SEMI      shift, and go to state 71


State 46

   20 VarDec: VarDec . LB INT RB
   48 Dec: VarDec .
   49    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 72
    LB        shift, and go to state 27

    $default  reduce using rule 48 (Dec)


State 47

   44 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 73


State 48

   46 DecList: Dec .
   47        | Dec . COMMA DecList

    COMMA  shift, and go to state 74

    $default  reduce using rule 46 (DecList)


State 49

   14 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 14 (StructSpecifier)


State 50

   42 DefList: Def DefList .

    $default  reduce using rule 42 (DefList)


State 51

   29 CompSt: LC DefList error . RC

    RC  shift, and go to state 75


State 52

   67 Exp: INT .

    $default  reduce using rule 67 (Exp)


State 53

   68 Exp: FLOAT .

    $default  reduce using rule 68 (Exp)


State 54

   62 Exp: ID . LP Args RP
   63    | ID . LP RP
   66    | ID .

    LP  shift, and go to state 76

    $default  reduce using rule 66 (Exp)


State 55

   60 Exp: MINUS . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  转到状态 77


State 56

   61 Exp: NOT . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  转到状态 78


State 57

   59 Exp: LP . Exp RP

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  转到状态 79


State 58

   38 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 80


State 59

   36 Stmt: IF . LP Exp RP Stmt
   37     | IF . LP Exp RP Stmt ELSE Stmt
   40     | IF . error RP Stmt
   41     | IF . error RP Stmt ELSE Stmt

    error  shift, and go to state 81
    LP     shift, and go to state 82


State 60

   35 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  转到状态 83


State 61

   34 Stmt: CompSt .

    $default  reduce using rule 34 (Stmt)


State 62

   28 CompSt: LC DefList StmtList . RC
   30       | LC DefList StmtList . error

    error  shift, and go to state 84
    RC     shift, and go to state 85


State 63

   31 StmtList: Stmt . StmtList

    INT     shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    MINUS   shift, and go to state 55
    NOT     shift, and go to state 56
    LP      shift, and go to state 57
    LC      shift, and go to state 23
    WHILE   shift, and go to state 58
    IF      shift, and go to state 59
    RETURN  shift, and go to state 60

    $default  reduce using rule 32 (StmtList)

    CompSt    转到状态 61
    StmtList  转到状态 86
    Stmt      转到状态 63
    Exp       转到状态 64


State 64

   33 Stmt: Exp . SEMI
   39     | Exp . error SEMI
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB

    error     shift, and go to state 87
    ASSIGNOP  shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    RELOP     shift, and go to state 91
    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    DOT       shift, and go to state 96
    LB        shift, and go to state 97
    SEMI      shift, and go to state 98


State 65

   24 FunDec: ID LP error RP .

    $default  reduce using rule 24 (FunDec)


State 66

   20 VarDec: VarDec . LB INT RB
   27 ParamDec: Specifier VarDec .

    LB  shift, and go to state 27

    $default  reduce using rule 27 (ParamDec)


State 67

   22 FunDec: ID LP VarList RP .

    $default  reduce using rule 22 (FunDec)


State 68

   25 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        转到状态 37
    StructSpecifier  转到状态 8
    VarList          转到状态 99
    ParamDec         转到状态 39


State 69

   20 VarDec: VarDec LB INT RB .

    $default  reduce using rule 20 (VarDec)


State 70

   50 Dec: error ASSIGNOP . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  转到状态 100


State 71

   45 Def: Specifier error SEMI .

    $default  reduce using rule 45 (Def)


State 72

   49 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  转到状态 101


State 73

   44 Def: Specifier DecList SEMI .

    $default  reduce using rule 44 (Def)


State 74

   47 DecList: Dec COMMA . DecList

    error  shift, and go to state 102
    ID     shift, and go to state 42

    VarDec   转到状态 46
    DecList  转到状态 103
    Dec      转到状态 48


State 75

   29 CompSt: LC DefList error RC .

    $default  reduce using rule 29 (CompSt)


State 76

   62 Exp: ID LP . Args RP
   63    | ID LP . RP

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57
    RP     shift, and go to state 104

    Exp   转到状态 105
    Args  转到状态 106


State 77

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   60    | MINUS Exp .
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB

    STAR  shift, and go to state 94
    DIV   shift, and go to state 95
    DOT   shift, and go to state 96
    LB    shift, and go to state 97

    $default  reduce using rule 60 (Exp)


State 78

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   61    | NOT Exp .
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB

    DOT  shift, and go to state 96
    LB   shift, and go to state 97

    $default  reduce using rule 61 (Exp)


State 79

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   59    | LP Exp . RP
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    RELOP     shift, and go to state 91
    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    DOT       shift, and go to state 96
    RP        shift, and go to state 107
    LB        shift, and go to state 97


State 80

   38 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  转到状态 108


State 81

   40 Stmt: IF error . RP Stmt
   41     | IF error . RP Stmt ELSE Stmt

    RP  shift, and go to state 109


State 82

   36 Stmt: IF LP . Exp RP Stmt
   37     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  转到状态 110


State 83

   35 Stmt: RETURN Exp . SEMI
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    RELOP     shift, and go to state 91
    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    DOT       shift, and go to state 96
    LB        shift, and go to state 97
    SEMI      shift, and go to state 111


State 84

   30 CompSt: LC DefList StmtList error .

    $default  reduce using rule 30 (CompSt)


State 85

   28 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 28 (CompSt)


State 86

   31 StmtList: Stmt StmtList .

    $default  reduce using rule 31 (StmtList)


State 87

   39 Stmt: Exp error . SEMI

    SEMI  shift, and go to state 112


State 88

   51 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  转到状态 113


State 89

   52 Exp: Exp AND . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  转到状态 114


State 90

   53 Exp: Exp OR . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  转到状态 115


State 91

   54 Exp: Exp RELOP . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  转到状态 116


State 92

   55 Exp: Exp PLUS . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  转到状态 117


State 93

   56 Exp: Exp MINUS . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  转到状态 118


State 94

   57 Exp: Exp STAR . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  转到状态 119


State 95

   58 Exp: Exp DIV . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  转到状态 120


State 96

   65 Exp: Exp DOT . ID

    ID  shift, and go to state 121


State 97

   64 Exp: Exp LB . Exp RB
   69    | Exp LB . error RB

    error  shift, and go to state 122
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  转到状态 123


State 98

   33 Stmt: Exp SEMI .

    $default  reduce using rule 33 (Stmt)


State 99

   25 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 25 (VarList)


State 100

   50 Dec: error ASSIGNOP Exp .
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    RELOP     shift, and go to state 91
    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    DOT       shift, and go to state 96
    LB        shift, and go to state 97

    $default  reduce using rule 50 (Dec)


State 101

   49 Dec: VarDec ASSIGNOP Exp .
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    RELOP     shift, and go to state 91
    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    DOT       shift, and go to state 96
    LB        shift, and go to state 97

    $default  reduce using rule 49 (Dec)


State 102

   21 VarDec: error . RB
   50 Dec: error . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 70
    RB        shift, and go to state 22


State 103

   47 DecList: Dec COMMA DecList .

    $default  reduce using rule 47 (DecList)


State 104

   63 Exp: ID LP RP .

    $default  reduce using rule 63 (Exp)


State 105

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB
   70 Args: Exp . COMMA Args
   71     | Exp .

    ASSIGNOP  shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    RELOP     shift, and go to state 91
    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    DOT       shift, and go to state 96
    LB        shift, and go to state 97
    COMMA     shift, and go to state 124

    $default  reduce using rule 71 (Args)


State 106

   62 Exp: ID LP Args . RP

    RP  shift, and go to state 125


State 107

   59 Exp: LP Exp RP .

    $default  reduce using rule 59 (Exp)


State 108

   38 Stmt: WHILE LP Exp . RP Stmt
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    RELOP     shift, and go to state 91
    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    DOT       shift, and go to state 96
    RP        shift, and go to state 126
    LB        shift, and go to state 97


State 109

   40 Stmt: IF error RP . Stmt
   41     | IF error RP . Stmt ELSE Stmt

    INT     shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    MINUS   shift, and go to state 55
    NOT     shift, and go to state 56
    LP      shift, and go to state 57
    LC      shift, and go to state 23
    WHILE   shift, and go to state 58
    IF      shift, and go to state 59
    RETURN  shift, and go to state 60

    CompSt  转到状态 61
    Stmt    转到状态 127
    Exp     转到状态 64


State 110

   36 Stmt: IF LP Exp . RP Stmt
   37     | IF LP Exp . RP Stmt ELSE Stmt
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    RELOP     shift, and go to state 91
    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    DOT       shift, and go to state 96
    RP        shift, and go to state 128
    LB        shift, and go to state 97


State 111

   35 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 35 (Stmt)


State 112

   39 Stmt: Exp error SEMI .

    $default  reduce using rule 39 (Stmt)


State 113

   51 Exp: Exp . ASSIGNOP Exp
   51    | Exp ASSIGNOP Exp .
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    RELOP     shift, and go to state 91
    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    DOT       shift, and go to state 96
    LB        shift, and go to state 97

    $default  reduce using rule 51 (Exp)


State 114

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   52    | Exp AND Exp .
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   69    | Exp . LB error RB
